<resources>
    <string name="action_settings">Settings</string>

    <string name="wl_string">Go To Weekend League</string>
    <string name="past_wl_string">Past Weekend League Results</string>
    <string name="new_game">New Game Stats</string>
    <string name="view_games">View Games</string>
    <string name="wl_finished">Start New Weekend League</string>
    <string name="error_loading">An error occurred loading the leaderboards!</string>
    <string name="error_retry">RETRY</string>


    <string name="connection_error_title">There was an error connecting to the Internet!</string>
    <string name="connection_error_message">Please check your Internet connection before trying again.</string>

    <string-array name="formations_array">
        <item>4&#8211;1&#8211;2&#8211;1&#8211;2</item>
        <item>4&#8211;1&#8211;2&#8211;1&#8211;2(2)</item>
        <item>4&#8211;1&#8211;4&#8211;1</item>
        <item>4&#8211;2&#8211;2&#8211;2</item>
        <item>4&#8211;2&#8211;3&#8211;1</item>
        <item>4&#8211;2&#8211;3&#8211;1(2)</item>
        <item>4&#8211;3&#8211;1&#8211;2</item>
        <item>4&#8211;3&#8211;2&#8211;1</item>
        <item>4&#8211;3&#8211;3</item>
        <item>4&#8211;3&#8211;3(2)</item>
        <item>4&#8211;3&#8211;3(3)</item>
        <item>4&#8211;3&#8211;3(4)</item>
        <item>4&#8211;3&#8211;3(5)</item>
        <item>4&#8211;4&#8211;1&#8211;1</item>
        <item>4&#8211;4&#8211;2</item>
        <item>4&#8211;4&#8211;2(2)</item>
        <item>4&#8211;5&#8211;1</item>
        <item>4&#8211;5&#8211;1(2)</item>

        <item>5&#8211;2&#8211;1&#8211;2</item>
        <item>5&#8211;2&#8211;2&#8211;1</item>
        <item>5&#8211;3&#8211;2</item>

        <item>3&#8211;4&#8211;1&#8211;2</item>
        <item>3&#8211;4&#8211;2&#8211;1</item>
        <item>3&#8211;4&#8211;3</item>
        <item>3&#8211;5&#8211;2</item>

    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weekend_league">Weekend League</string>
    <string name="games_list">Games List</string>
    <string name="new_game_string">New Game</string>
    <string name="edit_game">Edit Game</string>
    <string name="edit_alert_title">Note:</string>
    <string name="edit_alert_message">Any changes on this page are automatically saved!</string>
    <string name="save_changes">Save Changes</string>
    <string name="no_games_have_been_added">No Games have been added!</string>
    <string name="no_games_have_been_added_to_this_weekend_league">No games have been added to this Weekend League!</string>
    <string name="your_stats">Your Stats</string>
    <string name="opponent_stats">Opponent Stats</string>
    <string name="input_hint">0</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="shots_on_goal">Shots On Goal</string>
    <string name="possession">Possession</string>
    <string name="tackles">Tackles</string>
    <string name="corners">Corners</string>
    <string name="teams_info">Game Info</string>
    <string name="user_team_hint">Serie A Hybrid</string>
    <string name="team_used">Team Used</string>
    <string name="opp_team_hint">Sweaty EPL</string>
    <string name="formation">Formation</string>
    <string name="user_team_rating_hint">85</string>
    <string name="team_rating">Team Rating</string>
    <string name="opp_team_rating_hint">82</string>
    <string name="opponent_name">Gamertag</string>
    <string name="opponent_name_team_name">Team Name</string>
    <string name="opp_name_hint">Beast FC</string>
    <string name="results">Results</string>
    <string name="penalties">Penalties</string>
    <string name="pen_hint_user">5</string>
    <string name="penalties_score">Penalties Score</string>
    <string name="pen_score_opp">4</string>
    <string name="rage_quit">Rage Quit</string>
    <string name="rage_quit_hint">What Minute?</string>
    <string name="notes_hint">General Notes on the game can go here</string>
    <string name="game_complete">Game Complete</string>
    <string name="you">You</string>
    <string name="opponent">Opponent</string>
    <string name="team_name">Team Name</string>
    <string name="score">Score</string>
    <string name="games_left_hint">40</string>
    <string name="games_left">Games Left</string>
    <string name="games_won">Games Won</string>
    <string name="games_played">Games Played</string>
    <string name="avg_for_against">Avg. For(Against)</string>
    <string name="avg_on_target">Avg. (On Target)</string>
    <string name="shots_against">Shots Against</string>
    <string name="shots_for">Shots For</string>
    <string name="avg_opponent_team_rating">Team Rating</string>
    <string name="disconnected_from_ea_servers">Disconnected from EA servers?</string>
    <string name="disconnects">Disconnects</string>
    <string name="rage_quits">Rage Quits</string>
    <string name="past_weekend_leagues">Past Weekend Leagues</string>
    <string name="avg_opponent">Avg. Opponent</string>
    <string name="background">background</string>
    <string name="back_button_cont_desc">Back Button</string>
    <string name="restart_weekend_league">Restart Weekend League</string>
    <string name="save_weekend_league">Save Weekend League</string>
    <string name="delete_weekend_leagues">Delete Weekend Leagues</string>
    <string name="weekend_leagues_played">Weekend Leagues Played</string>
    <string name="pass_accuracy">Pass Accuracy</string>
    <string name="for_against">For(Against)</string>
    <string name="goals_shots_on_goal">Goals/Shots on Goal</string>
    <string name="general_notes_floathint">General Notes</string>
    <string name="my_squads">My Squads</string>
    <string name="squad_name">Squad Name / Type</string>
    <string name="add_squad">Add Squad</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_squad">Add New Squad</string>
    <string name="undo">Undo</string>
    <string name="deleted_squad">Delete Squad?</string>
    <string name="opponent_team_type_league">Opponent Team Type / League</string>
    <string name="your_team_used">Your Team</string>
    <string name="create_new_squad">Create New Squad</string>
    <string name="opponent_info">Opponent Info</string>
    <string name="no_past_wls_string">No Past Weekend Leagues have been saved!</string>
    <string name="close">Close</string>
    <string name="no_squads_added_yet_txt">No Squads have been added yet. Use the button below to create a new squad.</string>
    <string name="edit_squad">Edit Squad</string>
    <string name="confirm_edit">Confirm</string>
    <string name="view_all_games">View All Games</string>
    <string name="view_all_weekend_leagues">View All Weekend Leagues</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="past_weekends">Past Weekends</string>
    <string name="error_loading_leaderboards">There was an error loading the leaderboards, please try again later!</string>
    <string name="win_txt">WIN</string>
    <string name="loss_txt">LOSS</string>

    <string name="total_goals_n_conceded">Total Goals\nConceded</string>
    <string name="total_goals_nscored">Total Goals\nScored</string>
    <string name="goals_shot_n_opp">Goals/Shot\n(Opp)</string>

    <string name="month">Month</string>
    <string name="overall_rank">Overall Rank</string>
    <string name="region_rank">Region Rank</string>
    <string name="wins">Wins</string>
    <string name="skill">Skill</string>
    <string name="top_100">Fut Champions Top 100</string>
    <string name="rank">Rank</string>
    <string name="user">User</string>
    <string name="region">Region</string>

    <string name="facebook_app_id">276934669462684</string>

    <string name="epl">EPL</string>
    <string name="serie_a">Serie A</string>
    <string name="bundes">Bundes</string>
    <string name="la_liga">La Liga</string>
    <string name="ligue_1">Ligue 1</string>
    <string name="hybrid">Hybrid</string>
    <string name="other">Other</string>
    <string name="_1_nation">1 Nation</string>
    <string name="main_app_info">Main App Info</string>
    <string name="info">Info</string>
    <string name="app_info">App Info</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>

</resources>
